--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: yandex_smart_captcha
-description: Unofficial Flutter package for Yandex SmartCaptcha
-version: 1.0.1
-homepage: https://github.com/yom-ko/yandex_smart_captcha
+description: Unofficial Flutter package for Yandex SmartCaptcha with a streamlined API.
+version: 1.0.2
+homepage: https://github.com/yom-ko/flutter_yandex_smart_captcha
+repository: https://github.com/yom-ko/flutter_yandex_smart_captcha
 
 platforms:
   android:
